--- a/config/west.yml
+++ b/config/west.yml
@@ -1,11 +1,12 @@
 manifest:
   remotes:
+  # zmk fork with mouse emulation
     - name: zmkfirmware
-      url-base: https://github.com/zmkfirmware
+      url-base: https://github.com/petejohanson
   projects:
     - name: zmk
       remote: zmkfirmware
-      revision: main
+      revision: feat/pointers-move-scroll
       import: app/west.yml
   self:
     path: config
